--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,16 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background"
-    tools:context=".activity.fragment.RegistrationFragment">
+    android:orientation="vertical"
+    android:padding="30dp"
+    tools:context=".activity.fragment.LoginFragment">
 
-    <TextView
+
+    <com.example.fooddeliveryapp.activity.view.InputField
+        android:id="@+id/input_email"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="REGISTER"
-        android:textSize="25sp"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        app:title="Email address" />
 
-</FrameLayout>
+    <com.example.fooddeliveryapp.activity.view.InputField
+        android:id="@+id/input_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:inputType="textPassword"
+        app:title="Password" />
+
+    <com.example.fooddeliveryapp.activity.view.InputField
+        android:id="@+id/repeat_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:inputType="textPassword"
+        app:title="Repeat Password" />
+
+    <com.example.fooddeliveryapp.activity.view.InputField
+        android:id="@+id/nickname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        app:title="NickName" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <com.example.fooddeliveryapp.activity.view.ActionButton
+        android:id="@+id/button_enter"
+        android:layout_width="320dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:text="@string/enter" />
+
+</LinearLayout>
